# schema-salad-plus-pydantic

./: .gitignore  CLAUDE.md  HISTORY.rst  LICENSE  Makefile  PLAN.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: deploy.yaml  lint.yml
scripts/: bootstrap_history.py  commit_version.py  new_version.py  print_version_for_release.py
src/schema_salad_plus_pydantic/: __init__.py  cli.py  codegen.py  codegen_base.py  codegen_effect_schema.py  codegen_typescript.py  enhance_docs.py  orchestrate.py
tests/: conftest.py  test_codegen.py  test_codegen_typescript.py  test_effect_schema_roundtrip.py  test_roundtrip.py  test_typescript_roundtrip.py
tests/schemas/: simple.yml
tests/ts_project/: package.json  tsconfig.json  validate_bad_discriminator.ts  validate_bad_enum.ts  validate_good.ts
tests/ts_project_effect/: package.json  validate_alias.ts  validate_bad_discriminator.ts  validate_bad_enum.ts  validate_good.ts
