[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-salad-plus-pydantic"
dynamic = ["version"]
description = "Generate pydantic v2 BaseModel classes from schema-salad definitions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "John Chilton", email = "jmchilton@gmail.com"},
]
keywords = ["schema-salad", "pydantic", "code-generation", "galaxy", "cwl"]
dependencies = [
    "schema-salad[pycodegen]",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/jmchilton/schema-salad-plus-pydantic"
Repository = "https://github.com/jmchilton/schema-salad-plus-pydantic"
Issues = "https://github.com/jmchilton/schema-salad-plus-pydantic/issues"
Changelog = "https://github.com/jmchilton/schema-salad-plus-pydantic/blob/main/HISTORY.rst"

[project.scripts]
schema-salad-plus-pydantic = "schema_salad_plus_pydantic.cli:main"

[dependency-groups]
lint = [
    "black",
    "ruff",
]
mypy = [
    "mypy",
    "types-PyYAML",
    "pydantic",
]
test = [
    "pytest",
]
release = [
    "build",
    "twine",
    "packaging",
    "requests",
]

[tool.setuptools.dynamic]
version = {attr = "schema_salad_plus_pydantic.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
